[gd_scene load_steps=2 format=3 uid="uid://cnjt2h24nq3xp"]

[ext_resource type="Script" uid="uid://q78o4or8dopn" path="res://scripts/network_ui.gd" id="1_rqm01"]

[node name="NetworkUI" type="Control" node_paths=PackedStringArray("address_input", "status_label")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rqm01")
address_input = NodePath("VBoxContainer/AddressInput")
status_label = NodePath("VBoxContainer/StatusLabel")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -120.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 32)
layout_mode = 2
size_flags_horizontal = 3
text = "Select mode"
horizontal_alignment = 1

[node name="HostButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 48)
layout_mode = 2
size_flags_horizontal = 3
text = "Host"

[node name="JoinButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 48)
layout_mode = 2
size_flags_horizontal = 3
text = "Join"

[node name="AddressInput" type="LineEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 36)
layout_mode = 2
size_flags_horizontal = 3
text = "127.0.0.1"
placeholder_text = "Server Address"

[connection signal="pressed" from="VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
